--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 # defaults file for kyoushi-gather
+kyoushi_gather_rsync_extra_options: []
 kyoushi_gather_ignore_errors: no
 kyoushi_gather_ignore_facts_extra: []
 kyoushi_gather_ignore_facts_base:
